--- a/index_old.html
+++ b/index_old.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jeu de vitesse de frappe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style_old.css">
 </head>
 <body>
     <div class="container">
