--- a/index_old.html
+++ b/index_old.html
@@ -39,6 +39,6 @@
         <button id="start-button">Démarrer le jeu</button>
     </div>
 
-    <script src="script_projet.js"></script>
+    <script src="js_old.js"></script>
 </body>
 </html>
