add nb and length words options

--- a/index.html
+++ b/index.html
@@ -25,11 +25,27 @@
     <div id="time">
         <label for="chrono">temps :</label>
         <select name="chrono" id="chrono">
-            <option value="">--selectionner un temps--</option>
-            <option value="1">2s</option>
-            <option value="2">3s</option>
-            <option value="3">5s</option>
             <option value="3">10s</option>
+            <option value="3">5s</option>
+            <option value="2">3s</option>
+            <option value="1">2s</option>
+        </select>
+    </div>
+    <div id="nb_words_container">
+        <label for="nb_words">nombre de mots :</label>
+        <select name="nb_words" id="nb_words">
+            <option value="30">30 mots</option>
+            <option value="20">20 mots</option>
+            <option value="10">10 mots</option>
+            <option value="5">5 mots</option>
+        </select>
+    </div>
+    <div id="length_words_container">
+        <label for="length_words">Taille des mots :</label>
+        <select name="length_words" id="length_words">
+            <option value="10">10 caractères</option>
+            <option value="7">7 caractères</option>
+            <option value="5">5 caractères</option>
         </select>
     </div>
 </body>
