--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
                     <option value="2">2s</option>
                     <option value="1">1s</option>
                 </select>
+                <label>
+                    <input type="checkbox" id="accel"> Activer l'accélération
+                </label>
+                
             </div>
             <div id="nb_words_container">
                 <label for="nb_words">nombre de mots :</label>
