--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     
     <div id="game_container">
 
-        <div id="screen">a</div>
+        <div id="screen"></div>
         <div>
             <div id="btn_commencer"><button id="start">Commencer</button></div>
             <div id="keyboard">
