--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jeu de vitesse</title>
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style_gpt.css">
     <script src="script.js" defer></script>
 </head>
 <body>
@@ -23,10 +23,10 @@
     
             <div id="screen"></div>
             <div id="configs">
-                <div id="btn_commencer"><button id="start">Commencer</button></div>
                 <div id="keyboard">
                     <input type="text" id="input_keyboard" placeholder="entrer le mot ici">
                 </div>
+                <div id="btn_commencer"><button id="start">Commencer</button></div>
                 <div id="parameters">
                     <div id="time_container">
                         <label for="chrono">temps :</label>
